# EcoCar-Sally-Dashboard-Preview

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: static.yml
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
src/: lib.rs
