# You must change these to your own details.
[package]
name = "sally_dashboard_preview"
description = "A preview of Sally's dashboard"
version = "0.1.0"
authors = ["Dash Campbell <dash2@ualberta.ca>"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["run-wasm"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"
embedded-graphics-web-simulator = "0.4.0"
tinybmp = "0.6"
console_error_panic_hook = "0.1.5"
embedded-graphics = "0.8"
# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]


# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4"
